--- a/should-i-backend/config/database.yml
+++ b/should-i-backend/config/database.yml
@@ -25,11 +25,15 @@ development:
   <<: *default
   database: should_i_backend_development
 
+  host: localhost
+  user: Ray
+  password: CS666ra
+
   # The specified database role being used to connect to postgres.
   # To create additional roles in postgres see `$ createuser --help`.
   # When left blank, postgres will use the default role. This is
   # the same name as the operating system user that initialized the database.
-  #username: should_i_backend
+  # username: Ray
 
   # The password associated with the postgres role (username).
   #password:
@@ -58,6 +62,10 @@ development:
 test:
   <<: *default
   database: should_i_backend_test
+
+  host: localhost
+  user: Ray
+  password: CS666ra
 
 # As with config/credentials.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
